# Lego_bricks_packing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  connect_to_py.sh  package.xml
scripts/MES/: README.md  ordering_client.py  rsd_2019_app_public.py
scripts/VISION/: .gitignore  Configuration_Script.py  Cropping_values.json  HSV_thresholds.json  README.md  Test_script.py  configuration_hsv_thresholds.py  configuration_rgb_thresholds.py  filter_color_hsv.py  filter_color_rgb.py  filter_crop.py  select_image_patch.py  show_results.py
scripts/VISION/conf_files/: Cropping_values.json  HSV_thresholds.json  RGB_thresholds.json  configuration_image_crop.py
scripts/VISION/src/: filter_color_rgb.py  filter_crop.py  show_results.py
src/BrickDetection/: Test_script.py
src/BrickDetection/conf_files/: Cropping_values.json
src/BrickDetection/src/: filter_color_hsv.py  filter_color_rgb.py
src/Gui_v1/: Gui_v1.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_copy.ui
src/gui/: CMakeLists.txt  package.xml
src/gui/html/: index.html  stylesheet.css
src/gui/launch/: start_gui.launch
src/gui/misc/: packml.dia
src/gui/script/: open_gui_chrome.sh
src/local_log/: CMakeLists.txt  README.md  package.xml  system_logger_db.sql
src/local_log/launch/: local_log.launch
src/local_log/msg/: system_log_msg.msg
src/local_log/scripts/: local_logger.py
src/mes_ordering/: CMakeLists.txt  package.xml  testfile
src/mes_ordering/launch/: mes_ordering.launch
src/mir_api/: CMakeLists.txt  README.md  package.xml
src/mir_api/launch/: mir_api.launch
src/mir_api/scripts/: mir_api_pubsub.py  mir_api_service.py
src/robotics/: pickup_demo_no_gripper.cpp  print_pose_test.cpp  robot_node.cpp  simple_demo.cpp
src/robotics_control/: CMakeLists.txt  README.md  package.xml
src/system_manager/: CMakeLists.txt  package.xml
src/system_manager/src/: state.cpp  (+3 more)
src/ur_digital_ports/: CMakeLists.txt  package.xml
src/vision/: CMakeLists.txt  README.md  package.xml
src/vision/conf/: Configuration_Script.py  Cropping_values.json  HSV_thresholds.json  RGB_thresholds.json  configuration_hsv_thresholds.py  utilities.py  vision_utilities.py
src/vision/launch/: vision.launch
src/vision/scripts/: .server_update.py.swp  box_verification.py  client.py  listener.py  modbus_camera_server.py  modbus_utilities.py  modbus_vision_client.py  modbus_visualizer_client.py  server_update.py  talker.py  utilities.py  vision_utilities.py  visualizer.py  visualizer_client.py
src/vision/srv/: check_brick.srv
(+32 files in other folders)
