<?xml version="1.0"?>
<package format="2">
  <name>mir_api</name>
  <version>0.0.0</version>
  <description>MiR REST api node</description>
  <maintainer email="frknu14@student.sdu.dk">Frederik I K</maintainer>
  <license>BSD</license>

  <!-- Dependencies : -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
